# cstf

./: CMakeLists.txt
data/: GenerateCSTF.py  example.cstf
examples/: CMakeLists.txt  CSTF.cpp  cstf.cpp  events.cpp  serialize.cpp
examples/common/: StreamEquality.h
examples/data/: GenerateCSTF.py  example.cstf
include/: CSTF.h
include/CSTF/Format/: CSTF.h  GameData.h  Header.h
include/CSTF/Format/Events/: BaseEvent.h  Events.h  PlayerDamageEvent.h  PlayerMoveEvent.h
include/CSTF/Format/Tables/: EventLUT.h  LookupTable.h  RoundLUT.h
include/CSTF/Serialize/: Serializable.h  Serializer.h
include/CSTF/Serialize/Serializers/: BaseEventSerializer.h  CSTF.h  Event.h  GameData.h  GameDataSerializer.h  Header.h  HeaderSerializer.h  TableSerializer.h  Tables.h
include/CSTF/Utility/: Stream.h  Types.h
src/: CSTF.cpp  CSTF.h  CSTFGameData.h  CSTFHeader.h  CSTFLookupTable.h  CSTFRoundEventLUT.h  CSTFRoundLUT.h  GameData.h  Header.h  Serializable.h  Stream.h  Types.h
src/Events/: BaseEvent.h  Events.h  PlayerDamageEvent.h  PlayerMoveEvent.h
src/Serialize/: Serializable.h  Serialize.h  Serializer.h
src/Serialize/Serializers/: BaseEventSerializer.h  CSTFSerializer.h  GameDataSerializer.h  HeaderSerializer.h  TableSerializer.h
src/Tables/: EventLUT.h  LookupTable.h  RoundLUT.h
