CMAKE_MINIMUM_REQUIRED(VERSION 3.20)

PROJECT(cstf)

FILE(GLOB_RECURSE SOURCES "./src/*.cpp")
FILE(GLOB_RECURSE HEADERS "./src/*.h")

ADD_EXECUTABLE(${CMAKE_PROJECT_NAME})

TARGET_SOURCES(${CMAKE_PROJECT_NAME} PRIVATE ${SOURCES})
TARGET_INCLUDE_DIRECTORIES(${CMAKE_PROJECT_NAME} SYSTEM PUBLIC "./src")

SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES CXX_STANDARD 23)
SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic")

SET(CMAKE_CXX_FLAGS_RELEASE "-Os -flto")
SET(CMAKE_CXX_FLAGS_DEBUG "-O0 -g -fsanitize=address,leak,undefined")
